added retrieveRecord operation
